    TC_EXPERT=No. Beginning with Shorewall 4.5.0, packets from these
    interfaces will only have those rules applied when TC_EXPERT=Yes.

----------------------------------------------------------------------------
          P R O B L E M S   C O R R E C T E D   I N   4 . 5 . 2
----------------------------------------------------------------------------

None.

----------------------------------------------------------------------------
             K N O W N   P R O B L E M S   R E M A I N I N G
----------------------------------------------------------------------------

None.

----------------------------------------------------------------------------
                N E W   F E A T U R E S   I N   4 . 5 . 2
----------------------------------------------------------------------------

1)  The OPTIMIZE bit 4 feature added in 4.5.1 is now extended to all
    tables.

----------------------------------------------------------------------------
                N E W   F E A T U R E S   I N   4 . 5
----------------------------------------------------------------------------

1)  The shorewall.conf options WIDE_TC_MARKS and HIGH_ROUTE_MARKS are
    now deprecated in favor of a new set of options that define the layout
    of the 32-bit packet/connection mark.

        TC_BITS           Number of bits at the least-significant end
       			  of the mark used for traffic shaping. Marks
       			  used for traffic shaping must have a value
       			  between 1 and 2**TC_BITS - 1.

        PROVIDER_OFFSET   The offset in bits from the least-significant
			  end of the mark where the provider mark field
       			  begins. If zero, the provider mark occupies
       			  the same area as the traffic shaping
       			  mark. Otherwise, the value specified must
       			  be greater than or equal to MASK_BITS
       			  (below). Shorewall will automatically adjust
       			  a non-zero PROVIDER_OFFSET to meet this
       			  requirement.
